--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+    padding-top: 100px;
 
     h2 {
       padding: 15px;
