--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,9 @@
 
 nav {
     background: @wild-sand;
+    opacity: .9;
+    position: fixed;
+    width: 100%;
 
     & > div {
         .flex-container(center, @flex-direction: column);
